[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tle_ddtools"
version = "0.3.1"
authors = [{ name = "David DeBoer", email = "david.r.deboer@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
description = "Tools for working with Two-Line Element (TLE) satellite data, including parsing, generation, and archival management."
keywords = ["TLE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
script-files = ["scripts/tle_ddupdate.py", "scripts/tle_ddconcat.py"]